--- a/package.json
+++ b/package.json
@@ -49,12 +49,15 @@
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.40",
+    "chart.js": "^2.9.3",
     "epub-cover-extractor": "^1.0.3",
     "epubjs": "^0.3.85",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "qrcode.react": "^1.0.0",
     "react": "^16.8.4",
+    "react-chartjs-2": "^2.9.0",
     "react-counter": "^1.1.0",
     "react-coverflow": "^0.2.20",
     "react-dom": "^16.8.4",
