added tron stats page

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 node_modules/
+/home/simbad/Documents/Git_Repos/bttscan/src/components/charts/lineTronStats.json
+/home/simbad/Documents/Git_Repos/bttscan/src/components/charts/lineChart.json
+/home/simbad/Documents/Git_Repos/bttscan/src/components/charts/dliveStats.json
