--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "react-counter": "^1.1.0",
     "react-coverflow": "^0.2.20",
     "react-dom": "^16.8.4",
+    "react-files": "^2.4.8",
+    "react-keyed-file-browser": "^1.9.0",
     "react-numeric-input": "^2.2.3",
     "react-qr-reader": "^2.2.1",
     "react-scripts": "^2.1.8",
